fixed broken link for CVS resource decorations (pointed it to a task, rather than a missing ref)

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/wnWorkbench.htm
@@ -139,12 +139,12 @@ Eclipse Workbench. The following lists some of them.
 <br><a href="../concepts/cantsup.htm">Ant support</a>
 </p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<br><a href="../tasks/ttoolbars.htm">Rearranging the main toolbar</a>
+<br><a href="../tasks/ttoolbars.htm">Rearranging the main toolbar</a><br>
+<a href="../tasks/tasks-107b.htm">Enabling the CVS resource decorations</a>
 </p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
 <br><a href="../reference/ref-35.htm">Log console view</a>
 <br><a href="../reference/ref-12.htm">Editors preferences</a>
-<br><a href="../reference/ref-??.htm">Label decorations preferences</a>
 <br><a href="../reference/ref-15.htm">Perspectives preferences</a>
 <br><a href="../reference/ref-10.htm">Workbench preferences</a>
 
