--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
@@ -12,8 +12,8 @@
 Creating a local Java application launch configuration</H1>
 <P CLASS="Para">
 You can use launch configurations to control various aspects of launching a Java application. The
-<b>Java Application</b> launch configuration tpye is used to launch local Java applications. Java application
-launch configurations can be lanuched in run or debug mode.</P>
+<b>Java Application</b> launch configuration type is used to launch local Java applications. Java application
+launch configurations can be launched in run or debug mode.</P>
 <OL CLASS="UnorderedList">
 <LI CLASS="Item">
 From the <b>Run</b> menu, or the <b>Debug</b> drop down menu, select <b>Debug...</b>. This opens
