--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
@@ -34,7 +34,7 @@ Or, to relaunch the most recent launch:</P>
   <li>
 <P CLASS="Para">
 From the menu bar <b>Run</b> &gt; <b>Run Last Launched (Ctrl+F11)</b>, or 
-<b>Run<b> &gt; <b>Debug Last Launched (F11)</b>.</P>
+<b>Run</b> &gt; <b>Debug Last Launched (F11)</b>.</P>
   </li>
 </ul>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
