adding back/next buttons.

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61d_repolocb.htm
@@ -35,7 +35,8 @@ specify an available repository.</p>
         view choose New &gt;&nbsp;Repository Location... 
         <blockquote> 
           <blockquote> 
-            <p><img align="texttop" border="0" src="../images/Image82_repo_new.jpg" alt="CVS Repositories view"></p>
+            <p>
+            <img align="texttop" border="0" src="../images/Image82_repo_new.jpg" alt="CVS Repositories view" width="496" height="137"></p>
           </blockquote>
         </blockquote>
         <blockquote> 
@@ -54,7 +55,8 @@ In the CVS Repository Location wizard we need to fill in the location of our
 repository and our login information. You may require assistance from your
 repository administrator in order to fill in the necessary information.
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_repo_new3.jpg" alt="Add CVS Repository dialog"></p>
+  <p>
+  <img align="texttop" border="0" src="../images/Image82_repo_new3.jpg" alt="Add CVS Repository dialog" width="437" height="461"></p>
 </blockquote>
 </TD>
 </TR>
@@ -146,12 +148,23 @@ Note that the repository connection is only used to validate the information.</P
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">Observe that the Repositories view now shows the new repository location.</P>
-<P CLASS="Para"><img align="texttop" border="0" src="../images/Image82_repo_view1.jpg" alt="CVS Repositories view"></P>
+<P CLASS="Para">
+<img align="texttop" border="0" src="../images/Image82_repo_view1.jpg" alt="CVS Repositories view" width="314" height="81"></P>
 </TD>
 </TR>
 </TBODY>
 </TABLE>
 </DIV>
+
+<P><a href="qs-61e_whatisloc.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+What is a repository location?</a>&nbsp;</P>
+
+
+<P><a href="qs-61d_repoloca.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Sharing our project</a></P>
+
 
 <P>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
