--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61c_offline.htm
@@ -55,7 +55,8 @@ Their contents should be as follows:
 </blockquote>
 <p>The Navigator should now appear as follows:</p>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image82_nav.jpg" alt="Navigator view"></p>
+  <p>
+  <img align="texttop" border="0" src="../images/Image82_nav.jpg" alt="Navigator view" width="206" height="154"></p>
 </blockquote>
 </TD>
 </TR>
@@ -70,8 +71,19 @@ Their contents should be as follows:
   project to the&nbsp; repository. </P>
 
 
+<P><a href="qs-61d_repoloca.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Sharing our project</a>&nbsp;</P>
+
+
+<P><a href="qs-60a_setup.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Setting up a CVS repository</a></P>
+
+
 <P><br>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+<a href="../hglegal2002.htm">
+<img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
 
 </BODY>
