--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-61f_syncproject.htm
@@ -4,11 +4,11 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Sharing our project</title>
+<title>Synchronizing our project</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h3> Sharing our project</h3>
+<h3> Synchronizing our project</h3>
 <P CLASS="Para">
 We have created our project and specified our repository location. Now we need
 to make our project available to other team members.</P>
@@ -82,7 +82,20 @@ In the Navigator view select the project JanesTeamProject.</P>
 </TBODY>
 </TABLE>
 
-<P>&nbsp;<br>
+<P>&nbsp;</P>
+
+
+<P><a href="qs-62b_sync.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Synchronize view</a>&nbsp;</P>
+
+
+<P><a href="qs-61e_whatisloc.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+What is a repository location?</a></P>
+
+
+<P><br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
