--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
@@ -54,6 +54,16 @@ synchronization modes that we will examine in a later section.
 
 <p>The lower toolbar (B) allows you to merge changes between your file and the
 repository copy of the file.</p>
+<P><a href="qs-62c_releasing.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Committing</a>&nbsp;</P>
+
+
+<P><a href="qs-61f_syncproject.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Synchronizing our project</a></P>
+
+
 <P><br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
