--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62c_releasing.htm
@@ -134,6 +134,16 @@ Select file3.txt, and choose Commit from the context menu.
 </TR>
 </TBODY>
 </TABLE>
+<P><a href="qs-64a_another.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Working with another user</a>&nbsp;</P>
+
+
+<P><a href="qs-62b_sync.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Synchronize view</a></P>
+
+
 <P>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
