adding back/next buttons.

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64a_another.htm
@@ -70,6 +70,16 @@ Both you and the repository have modifications to the same resource.
 </TABLE>
 
 
+<P><a href="qs-64b_fredadd.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Checking out a project</a>&nbsp;</P>
+
+
+<P><a href="qs-62c_releasing.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Committing</a></P>
+
+
 <P><br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
