--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64b_fredmod.htm
@@ -115,6 +115,16 @@ Modify file2.txt as follows
 </TR>
 </TBODY>
 </TABLE>
+<P><a href="qs-64c_catch_mod.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Making our own changes</a>&nbsp;</P>
+
+
+<P><a href="qs-64b_fredadd.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Checking out a project</a></P>
+
+
 <P>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 </P>
