--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_mod.htm
@@ -129,6 +129,16 @@ Select file1.txt (the incoming change). The comparison viewer shows:&nbsp;
 </TR>
 </TBODY>
 </TABLE>
+<P><a href="qs-64c_catch_sync_view.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Synchronize view</a>&nbsp;</P>
+
+
+<P><a href="qs-64b_fredmod.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Another user making changes</a></P>
+
+
 <P>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
