--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync_view.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync_view.htm
@@ -20,6 +20,16 @@ Synchronize view</h3>
   and then commit your changes.&nbsp; By first taking the latest repository changes, 
   and retesting, it helps to ensure that the changes you are about to commit will 
   actually work with the current state of the repository.</p>
+<P><a href="qs-64c_catch_sync2.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Updating</a>&nbsp;</P>
+
+
+<P><a href="qs-64c_catch_mod.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Making our own changes</a></P>
+
+
 <P CLASS="para">&nbsp;<br>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
