--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-74_version.htm
@@ -87,6 +87,17 @@ Select the project JanesTeamProject.</P>
 </TBODY>
 </TABLE>
 <P><br>
+<a href="qs-74_review.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+A quick review</a>&nbsp;</P>
+
+
+<P><a href="qs-70_replace.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Replacing</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
 
