*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -8,18 +8,24 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Showing an element in the Package Explorer</h1>
-  <p class=para>You can reveal an element&#8217;s location in the Package Explorer 
-    view.</p>
-  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the Hierarchy or Outline view, select a type or one of its members.</p>
-  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> From the selected element's pop-up menu, select <span
-class=label><b>Show in Package Explorer</b></span>. If the Package Explorer 
-    is not already open, then it opens in the current perspective. The workbench 
-    navigates to the selected element.</p>
+  <p class=para>You can reveal an element's location in the Package Explorer view</p>
+</div>
+<ul>
+  <li> 
+    <div class=Section1> In the Hierarchy or Outline view, select a type or one 
+      of its members.</div>
+  </li>
+  <li>From the selected element's pop-up menu, select <span
+	class=label>Show in Package Explorer</span>. If the Package Explorer is not 
+    already open, then it opens in the current perspective. The workbench navigates 
+    to the selected element.</li>
+  <li>From the Java editor's pop-up menu, select Show in Package Explorer (the 
+    currently edited compilation unit will be revealed)</li>
+</ul>
+<div class=Section1>
   <p class=para>Note: The element might not be revealed if Package Explorer filters 
-    are active or the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; 
-    Show Members in Package Explorer</b> preference is unselected. </p>
+    are active or the <strong>Window &gt; Preferences &gt; Java &gt; Appearance 
+    &gt; Show Members in Package Explorer</strong> preference is unselected. </p>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-6.htm">Java views</a></p>
@@ -33,7 +39,7 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
 src="../images/ngrelr.gif" alt="Related reference"></p>
   <p><a href="../reference/ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
-    <img border=0 width=195 height=12 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
+    <img border=0 id="_x0000_i1028" src="../images/ngibmcpy.gif"></p>
 </div>
 </body>
 </html>
