Added charset definition

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cjunit.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cjunit.htm
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><HTML>
+
 <head>
+	<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 	<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
    <title>JUnit intergation </title>
 </head>
