--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Java perspectives</title></head><body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Java perspectives</title></head>
+<body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
 <div class="Section1"> 
   <h1>Java perspectives</h1>
   <p class="para">The Java development tools contribute the following perspectives 
@@ -53,8 +55,8 @@
     <a href="../reference/ref-51.htm">Debug view</a><br>
     <a href="../reference/ref-52.htm">Display view</a><br>
     <a href="../reference/ref-56.htm">Expressions view</a><br>
-    <a href="../reference/ref-102.htm">Outline view for Java</a><br>
-    <a href="../reference/ref-90.htm">Package Explorer</a><br>
+    <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
+    <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
     <a href="../reference/ref-74.htm">Variables view</a></p>
 </div>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
