--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Java editor</title>
-</head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Java editor</title></head>
 <body bgcolor="#ffffff" lang="EN-US" link="blue" vlink="blue">
 <div class="Section1"> 
   <h1>Java editor</h1>
@@ -73,7 +72,7 @@
     <a href="../tasks/tasks-156.htm">Viewing runtime exceptions</a></p>
   <p><img border="0" width="159" height="27" id="_x0000_i1027" src="../images/ngrelr.gif" alt="Related reference"></p>
   <p><a href="../reference/ref-5.htm">Java editor actions</a><br>
-    <a href="../reference/ref-102.htm">Outline view for Java</a><br>
+    <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
     <a href="../reference/ref-26.htm">Syntax highlighting</a><br>
     <a href="../reference/ref-24.htm">Views and editors</a></p>
 </div>
