--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -76,6 +76,12 @@ statements are not updated when a compilation unit is moved.</div>
 </tr>
 </table>
 
-<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+
 </body>
 </html>
