--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -249,6 +249,12 @@ the current session.</div>
 menu or in the dialog to review the results of the selected search.</div>
 </div>
 
-<p><br><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+
 </body>
 </html>
