--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -109,15 +109,13 @@ The Expressions view opens with the value of the evaluated expression.</P>
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<br>
 
-<img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
-
-</P>
-
-
-
-
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
 
 </BODY>
 </HTML>
