--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -118,6 +118,26 @@
 
       <li>
         <p class="Para">
+          Go to the
+          <span class="Label">Java Editor</span>
+          preference page by selecting
+          <span class="Label">Java &gt; Editor</span>
+          in the tree pane.
+          On the preference page, press the
+          <span class="Label">Problem Indication</span> tab.
+        </p>
+        
+        <p class="Para">
+          Confirm that all options are checked.
+        </p>
+        
+        <div class="Snapshot">
+          <img src="../images/qs-X.gif" alt="Java Editor preference page" />
+        </div>        
+      </li>
+
+      <li>
+        <p class="Para">
           Leave the preferences by clicking on <span class="Label">OK</span>.
         </p>
       </li>
@@ -146,7 +166,7 @@
 
       <li>
         <p class="Para">
-          If the workbench is running, shut it down. Plugins should not be
+          If the workbench is running, shut it down. Plug-ins should not be
           installed while the workbench is running.
         </p>
       </li>
@@ -169,8 +189,10 @@
     </div>
 
     <div class="copyright">
-      <img src="../images/ngibmcpy2002.gif"
-        alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
     </div>
 
   </body>
