--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -44,8 +44,10 @@
     </div>
 
     <div class="copyright">
-      <img src="../images/ngibmcpy2002.gif"
-        alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
     </div>
 
   </body>
