--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -209,11 +209,13 @@ Remove All Terminated</SPAN>
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<br>
 
-<img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
-
-</P>
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
 
 </BODY>
 </HTML>
