--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -194,15 +194,13 @@ Terminate</SPAN>
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<br>
 
-<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
-
-</P>
-
-
-
-
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
 
 </BODY>
 </HTML>
