--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -137,8 +137,10 @@ org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.
     </ol>
 
     <div class="copyright">
-      <img src="../images/ngibmcpy2002.gif"
-        alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
     </div>
 
   </body>
