--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -193,6 +193,12 @@ under Window > Preferences > Workbench > Perspectives.</div>
 </tr>
 </table>
 
-<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+    
 </body>
 </html>
