--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -129,6 +129,12 @@ undo buffer is cleared.</div>
 </tr>
 </table>
 
-<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+
 </body>
 </html>
