--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-163.htm
@@ -12,10 +12,32 @@
 <h1 CLASS="Head"> Parameters page</h1>
 <h1 CLASS="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-163a.gif" width="433" height="326" alt="Parameters Page for the Self Encapsulate Field Refactoring Command"></h1>
 
-<div CLASS="FigureTitle">Parameters Page for the Self Encapsulate Field Refactoring 
-  Command</div>
-
-
+<div CLASS="FigureTitle"> 
+  <p>Parameters Page for the Self Encapsulate Field Refactoring Command</p>
+</div>
+<ul>
+  <li> 
+    <div CLASS="FigureTitle">In the <strong>Getter name</strong> field, enter 
+      the name for the getter.</div>
+  </li>
+  <li>In the <strong>Setter name</strong> field, enter the name for the setter.</li>
+  <li>Use the <strong>Insert new method after</strong> combo-box to indicate the 
+    location for the getter and/or setter methods.</li>
+  <li>Select one radio button from the <strong>Access modifier</strong> group 
+    to specify the new methods' visibility.</li>
+  <li>In the class in which the field is declared, read and write accesses can 
+    be direct or you can use getter and setter. 
+    <ul>
+      <li>Select the <strong>use getter and setter</strong> radio button if you 
+        want the wizard to convert all these accesses to use getter and setter.</li>
+      <li>Select the <strong>keep field reference</strong> radio button if you 
+        do not want the wizard to modify the current field accesses in the class 
+        in which the field is declared.</li>
+    </ul>
+  </li>
+  <li>Press <strong>Next</strong> to perform refactoring with preview or press 
+    <strong>Finish</strong> to perform refactoring without preview.</li>
+</ul>
 <div CLASS="XRefList">
 <div CLASS="Para">Related Topics:</div>
 
@@ -27,6 +49,6 @@
 
 </div>
 
-<p><br><img SRC="../images/ngibmcpy.gif" height=12 width=195>
+<p><br><img SRC="../images/ngibmcpy.gif" border=0>
 </body>
 </html>
