--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
@@ -13,11 +13,21 @@
 
   
   <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Changing encoding</title>
+  <title>Changing the encoding used to show the source</title>
 
   </head>
 <body bgcolor="#ffffff">
-<h1 class="Head">Changing encoding</h1>
-<p><br></p>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<h1 class="Head">Changing the encoding used to show the source</h1>
+<p>To changes the encoding tha the Java editor uses to display Java source:</p>
+<ul>
+  <li>With the Java editor open, select <strong>Edit &gt; Encoding</strong> from 
+    the menu bar</li>
+  <li>Select an encoding from the menu or select <strong>Others</strong> from 
+    the menu and, in the dialog that shows up, type in the encoding's name.<br>
+  </li>
+</ul>
+<p><strong>Note:</strong> this setting affects only the way the source is presented.To 
+  change the encoding that the Java editor uses to save files, use preferences 
+  on <strong>Window &gt; Preferences &gt; Workbench &gt; Editors</strong>.</p>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
 </body></html>
