--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -132,7 +132,7 @@
         </p>
         
         <div class="Snapshot">
-          <img src="../images/qs-X.gif" alt="Java Editor preference page" />
+          <img src="../images/qs-17a.gif" alt="Java Editor preference page" />
         </div>        
       </li>
 
