--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
@@ -1,33 +1,41 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-
-  
-  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-
-
-
-  
-  <meta http-equiv="Content-Style-Type" content="text/css">
-
-
-
-
-  
-  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Using templates</title>
-
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "DTD/xhtml1-strict.dtd">
+<html>
+  <head>
+    <title>Using templates</title>
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1"
+      type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
   </head>
-<body bgcolor="#ffffff">
-<h1 class="Head"> Using templates</h1>
-<p>&nbsp;</p>
-<p>To use templates:</p>
-<ul>
-  <li> In the Java editor, position the caret in a place where you want to insert 
-    a template.</li>
-  <li>Invoke content assist by pressing Ctrl+Space.</li>
-  <li>Templates show up in the presented list. Note that the list is filtered 
-    as you type, so typing a few first character of a template name will reveal 
-    it.<br>
-  </li>
-</ul>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
-</body></html>
+
+  <body>
+    <h1 class="Head">Using templates</h1>
+
+    <p>To use templates:</p>
+
+    <ol>
+      <li>
+        In the Java editor, position the caret in a place where you want to insert
+        a template.
+      </li>
+
+      <li>
+        Invoke content assist by pressing <key>Ctrl</key>+<key>Space</key>.
+      </li>
+      <li>
+        Templates show up in the presented list. Note that the list is filtered
+        as you type, so typing a few first character of a template name will reveal it.
+      </li>
+    </ol>
+
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+
+  </body>
+</html>
