--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-172.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-172.htm
@@ -1,36 +1,50 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-
-  
-  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-
-
-
-  
-  <meta http-equiv="Content-Style-Type" content="text/css">
-
-
-
-
-  
-  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Converting line delimiters</title>
-
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "DTD/xhtml1-strict.dtd">
+<html>
+  <head>
+    <title>Converting line delimiters</title>
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1"
+      type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
   </head>
-<body bgcolor="#ffffff">
-<h1 class="Head"> Converting line delimiters</h1>
-<p>Java editor can diplay Java files with various line delimiter kinds but some 
-  other external editors may not be able to handle them correctly.</p>
-<p>You may want to change line delimiters used by your Java files.</p>
-<p>It may also happen that a file has heterogenous line delimiters and you want 
-  to unify them.</p>
-<p>&nbsp;</p>
-<p>To convert line delimiters in Java files: <br>
-</p>
-<ul>
-  <li>Open a Java file in the Java editor</li>
-  <li>Select <b>Source &gt; Convert Line Delimiters</b> from the menu bar</li>
-  <li>Select the delimiters you want to convert the file to (one of <b>Windows</b>, 
-    <b>UNIX</b>, <b>Mac</b>)</li>
-</ul>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
-</body></html>
+
+  <body>
+    <h1 class="Head">Converting line delimiters</h1>
+
+    <p class="Para">
+      Java editor can diplay Java files with various line delimiter kinds but some 
+      other external editors may not be able to handle them correctly.
+    </p>
+
+    <p class="Para">
+      You may want to change line delimiters used by your Java files.
+    </p>
+
+    <p>
+      It may also happen that a file has heterogenous line delimiters and you want
+      to unify them.
+    </p>
+
+    <p>
+      To convert line delimiters in Java files:
+    </p>
+
+    <ol>
+      <li>Open a Java file in the Java editor</li>
+      <li>Select <b>Source &gt; Convert Line Delimiters</b> from the menu bar</li>
+      <li>Select the delimiters you want to convert the file to (one of <em>Windows</em>, 
+        <em>UNIX</em>, <em>Mac</em>)
+      </li>
+    </ol>
+
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+
+  </body>
+</html>
