--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-173.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-173.htm
@@ -1,23 +1,23 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-
-  
-  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-
-
-
-  
-  <meta http-equiv="Content-Style-Type" content="text/css">
-
-
-
-
-  
-  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Finding and replacing</title>
-
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
+<html>
+  <head>
+    <title>Finding and replacing</title>
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1"
+      type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
   </head>
-<body bgcolor="#ffffff">
-<h1 class="Head"> Finding and replacing</h1>
-<p><br></p>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
-</body></html>
+
+  <body>
+    <h1 class="Head">Finding and replacing</h1>
+
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+
+  </body>
+</html>
