--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
@@ -1,25 +1,47 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-  
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  
-  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Using Incremental Find</title>
-
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
+<html>
+  <head>
+    <title>Using Incremental Find</title>
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
   </head>
-<body bgcolor="#ffffff">
-<h1 class="Head">Using Incremental Find</h1>
-<p><br>
-  To use Incremental Find:</p>
-<ul>
-  <li>In the text (or Java) editor, press <b>Ctrl+J</b> or select <b>Edit &gt; 
-    Incremental Find</b> from the menu bar</li>
-  <li>The workbench status line displays Incremental Find: information which is 
-    updated as you type. The editor is now a the Incremental Find mode.</li>
-  <li>As you type, the editor finds the first occurrence of the text updates the 
-    selection after each character typed</li>
-</ul>
-<p>You can leave the Incremental Find mode by pressing <b>Esc</b>.</p>
-<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved."></a> 
-</p>
-</body></html>
+
+  <body>
+    <h1 class="Head">Using Incremental Find</h1>
+
+    <p class="Para">
+      To use Incremental Find:
+    </p>
+
+    <ol>
+      <li>
+        In the text (or Java) editor, press <key>Ctrl</key>+<key>J</key> or select
+        <span class="Label">Edit &gt; Incremental Find</span> from the menu bar
+      </li>
+
+      <li>
+        The workbench status line displays Incremental Find: information which is 
+        updated as you type. The editor is now in the Incremental Find mode.
+      </li>
+
+      <li>
+        As you type, the editor finds the first occurrence of the text and updates the 
+        selection after each character typed
+      </li>
+    </ol>
+
+    <p class="Para">
+      You can leave the Incremental Find mode by pressing <key>Esc</key>.
+    </p>
+
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+
+  </body>
+</html>
