--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-187.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-187.htm
@@ -1,27 +1,51 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-  
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  
-  <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Finding Next or Previous Match</title>
-
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
+<html>
+  <head>
+    <title>Finding Next or Previous Match</title>
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
   </head>
-<body bgcolor="#ffffff">
-<h1 class="Head">Finding Next or Previous Match</h1>
-<p><br>
-  To find the next match:</p>
-<ul>
-  <li>In the text (or Java) editor, press <b>Ctrl+K</b> or select <b>Edit &gt; 
-    Find Next</b> from the menu bar</li>
-  <li>The next occurrence of the text selected in the editor will be found.</li>
-</ul>
-<p>To find the previous match:</p>
-<ul>
-  <li>In the text (or Java) editor, press <b>Ctrl+Shift+K</b> or select <b>Edit 
-    &gt; Find Previous </b> from the menu bar</li>
-  <li>The next occurrence of the text selected in the editor will be found.</li>
-</ul>
-<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved."></a> 
-</p>
-</body></html>
+
+  <body>
+    <h1 class="Head">Finding Next or Previous Match</h1>
+
+    <p class="Para">
+      To find the next match:
+    </p>
+
+    <ol>
+      <li>
+        In the text (or Java) editor, press <key>Ctrl</key>+<key>K</key> or select
+        <span class="Label">Edit &gt; Find Next</span> from the menu bar.
+      </li>
+      <li>
+        The next occurrence of the text selected in the editor will be found.
+      </li>
+    </ol>
+
+    <p class="Para">
+      To find the previous match:
+    </p>
+
+    <ol>
+      <li>
+        In the text (or Java) editor, press <key>Ctrl</key>+<key>Shift</key>+<key>K</key> or select
+        <span class="Label">Edit &gt; Find Previous</span> from the menu bar.
+      </li>
+
+      <li>
+        The next occurrence of the text selected in the editor will be found.
+      </li>
+    </ol>
+
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+
+  </body>
+</html>
