*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
@@ -13,11 +13,13 @@ Building a Java program</H1>
 <P CLASS="Para">
 A build command compiles workbench resources. A build command can be triggered in different ways:</P>
 <UL CLASS="UnorderedList">
-<LI CLASS="Item">
-Building automatically: If auto build is turned on (<b>Workbench</b> &gt; <b>Preferences</b>), then an incremental build occurs every time you save a modified workbench resource.</LI>
-<LI CLASS="Item">
-Building manually: You can perform a manual build using a project's pop-up menu or the 
-<b>Project</b> menu in the menu bar.</LI>
+  <LI CLASS="Item"> Building automatically: If auto build is turned on (<strong>Window 
+    &gt; Preferences &gt; Perform build automatically on resource modification</strong>), 
+    then an incremental build occurs every time you save a modified workbench 
+    resource.</LI>
+  <LI CLASS="Item"> Building manually: You can perform a manual build using a, 
+    keyboard shortcut, a project's pop-up menu or the <b>Project</b> menu in the 
+    menu bar.</LI>
 </UL>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p>
