--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
@@ -10,11 +10,10 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Viewing compilation errors and warnings</H1>
-<P CLASS="Para">
-The workbench supports different ways to examine errors and warnings produced by a build. </P>
+<P CLASS="Para"> The workbench supports different ways to examine errors and warnings. 
+</P>
 <UL CLASS="UnorderedList">
-<LI CLASS="Item">
-Error ticks in the Package Explorer</LI>
+  <LI CLASS="Item"> Error ticks in Java views (e.g. Package Explorer)</LI>
 <LI CLASS="Item">
 Marker annotations in the editor</LI>
 <LI CLASS="Item">
