--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
@@ -10,26 +10,22 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
 Building automatically</H1>
-<p CLASS="Head">
-To turn automatic building on or off:</p>
+<p CLASS="Head"> To turn automatic building on: </p>
+<ul>
+  <li> Select <strong>Workbench &gt; Preferences &gt; Perform build automatically 
+    on resource modification</strong> check box.</li>
+</ul>
 <ol>
-  <li>
-<P CLASS="Para">
-Click <b>Workbench</b> &gt; 
-<b>Preferences</b>. The Workbench Preferences page opens</P>
+  <li> 
+    <p class="Head">To turn automatic building off: </p>
+    <ul>
+      <li>Unselect <strong>Workbench &gt; Preferences &gt; Perform build automatically 
+        on resource modification</strong> check box.</li>
+    </ul>
+    <P CLASS="Para">&nbsp; </P>
   </li>
-  <li>
-<P CLASS="Para">
-Select or clear the <b>Perform build automatically on resource</b> modification 
-check box.</P>
-  </li>
+  <li><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></li>
 </ol>
-
-
-
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 
 
 
