--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
@@ -17,33 +17,26 @@ The <SPAN CLASS="Label">
 Build</SPAN>
  command performs an incremental build that compiles all resources modified since the last build. To trigger an incremental build, either:</P>
 <UL CLASS="UnorderedList">
-<LI CLASS="Item">
-press <b>Ctrl</b>+<b>B</b></LI>
-<LI CLASS="Item">
-from the menu bar, select <b>Project</b> &gt; <b>Build</b></LI>
+  <LI CLASS="Item"> press <strong>Ctrl+B</strong> or</LI>
+  <LI>from the menu bar, select <strong>Project &gt; Build All</strong></LI>
 </UL>
-<h2>
-Full build</h2>
-<P CLASS="Para">
-The <SPAN CLASS="Label">
-Rebuild All</SPAN>
- command rebuilds all workbench resources that have an associated builder. You can 
-select <b>Project</b> &gt; <b>Rebuild All</b> to rebuild all workbench 
-resources.</P>
-<h2>
-Incremental project build</h2>
-<P CLASS="Para">
-The <SPAN CLASS="Label">
-Build Project </SPAN>
-command executes an incremental build limited to one project. This option is available from the 
-pop-up menu of any project resource in the Package Explorer.</P>
-<h2>
-Full project build</h2>
-<P CLASS="Para">
-The <SPAN CLASS="Label">
-Rebuild Project</SPAN>
- command rebuilds all resources contained in a project. This option is available from the 
-pop-up menu of any project resource in the Package Explorer.</P>
+<h2>Incremental project build</h2>
+<p class="Para"> You can also incrementally build single projects. Select the 
+  project that you want to build and:</p>
+<ul class="UnorderedList">
+  <li class="Item"> Select<strong>Project &gt; Build Project </strong>from the 
+    menu bar or</li>
+  <li>Select <strong>Build Project</strong> from the project's pop-up menu, </li>
+</ul>
+<h2></h2>
+<h2></h2>
+<h2>Full build</h2>
+<P CLASS="Para"> To rebuild all workbench resources that have an associated builder 
+  (e.g. Java projects), select <b>Project</b> &gt; <b>Rebuild All</b> from the 
+  menu bar.</P>
+<h2> Full project build</h2>
+<P CLASS="Para"> To rebuild all resources contained in a project, select the project 
+  and select <b>Project</b> &gt; <b>Rebuild Project </b> from the menu bar.</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-4.htm">Java builder</a><br>
 <a href="../concepts/cbuildcp.htm">Build class path</a></p>
