--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
@@ -1,40 +1,52 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Templates</title>
+<html>
+  <head>
+    <title>Templates</title>
+    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta http-equiv="Content-Style-Type" content="text/css" />
+  </head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Templates</H1>
-<P>&nbsp;</P>
-<ul>
-  <li> Templates try to guess the variable name. For instance, if you have an 
-    array called foos, the for template will notice this:</li>
-</ul>
+  <body>
 
-<code>void m(int[] foos){<br>
-&nbsp;for&lt;&lt;press Ctrl+Space here to enter the <b>for - iterate over array</b> template<br>
-}</code><br>
-<p>
-<p>you get:</p>
-<p> <code>void m(int[] foos){<br>
-  &nbsp;for (int i= 0; i &lt; foos.length; i++) {<br>
-  <br>
-  &nbsp;}<br>
-  }</code></p>
-<ul>
-  <li>You can define your own templates. Go to <b>Window &gt; Preferences &gt; 
-    Java &gt; Templates</b> and press the <b>New</b> button.</li>
-  <li>In template definitions, $ must be escaped by another $. So you write $$Log:$$ 
-    if you want $Log:$ to appear in the editor.</li>
-</ul>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<ul>
-  <img src=" ../ngibmcpy.gif"> 
-</ul>
-</BODY>
-</HTML>
+    <h1 class="Head">Templates</h1>
+
+    <ul>
+      <li>
+        Templates try to guess the variable name. For instance, if you have an 
+        array called foos, the for template will notice this:
+
+        <pre>void m(int[] foos){
+    for&lt;&lt;press Ctrl+Space here to enter the <em>for - iterate over array</em> template<br>
+}</pre>
+
+        <p>you get:</p>
+
+        <pre>void m(int[] foos) {
+    for (int i= 0; i &lt; foos.length; i++) {
+
+    }
+}</pre>
+
+      </li>
+      <li>
+        You can define your own templates. Go to <b>Window &gt; Preferences &gt; 
+        Java &gt; Templates</b> and press the <span class="Label">New...</span> button.
+      </li>
+      <li>
+        In template definitions, $ must be escaped by another $. So you write $$Log:$$ 
+        if you want $Log:$ to appear in the editor.
+      </li>
+    </ul>
+
+    <div class="copyright">
+      <a href="../hglegal2002.htm">
+        <img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+      </a>
+    </div>
+
+  </body>
+</html>
