--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
@@ -22,7 +22,9 @@
     for&lt;&lt;press Ctrl+Space here to enter the <em>for - iterate over array</em> template<br>
 }</pre>
 
-        <p>you get:</p>
+        <p class="Para">
+          you get:
+        </p>
 
         <pre>void m(int[] foos) {
     for (int i= 0; i &lt; foos.length; i++) {
