--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-2.htm
@@ -34,8 +34,9 @@
 
       </li>
       <li>
-        You can define your own templates. Go to <b>Window &gt; Preferences &gt; 
-        Java &gt; Templates</b> and press the <span class="Label">New...</span> button.
+        You can define your own templates. Go to
+        <span class="Label">Window &gt; Preferences &gt; Java &gt; Templates</span>
+        and press the <span class="Label">New...</span> button.
       </li>
       <li>
         In template definitions, $ must be escaped by another $. So you write $$Log:$$ 
